# OpenMat

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  REPO_SUMMARY.md  compile.sh  compile_commands.json  stream_perf_report.md  vscode_pathcommands.txt
cuda_mapped_memory/: mapped  mapped.cu
cuda_streams/: test_streams  test_streams.cu
cudatest/: CMakeLists.txt  run.sh
cudatest/headers/: cudautils.h  mat.h  matmul.h  matops.h
cudatest/src/: cudautils.cu  main.cpp  main.py  matmul.cu  matops.cu
distributed_shared_memory/: dshm.cu  test  test.cu
docs/: fused_operations.md  roadmap.md
framework/: CMakeLists.txt
framework/cmake/: detect_cuda_arch.cmake
framework/headers/: allocator.h  allocator.inl  device_tensor_view.cuh  kernel_launcher.h  kernel_launcher.inl  mat.cuh  mat.inl  mat_utils.h  mat_view.cuh  tensor.cuh  tensor.inl  tensor_view.cuh  utils.h
framework/headers/ops/cpu/: add_cpu.h  binary_op_macros.h  fill_cpu.h
framework/headers/ops/kernels/: binary_op_macros.cuh  fill_gpu.cuh
framework/src/: main.cpp  mat.cu  mat_utils.cpp  utils.cpp
framework/src/ops/kernels/: binary_ops.cu  fill_gpu.cu
headers/: allocator.h  allocator.inl  cuda_defines.cuh  device_tensor_view.cuh  kernel_launcher.h  kernel_launcher.inl  mat.inl  mat_utils.h  mat_utils.inl  stream.h  tensor.cuh  tensor.inl  tensor_view.cuh  utils.h
headers/ops/cpu/: binary_op_macros.h  fill_cpu.h  matmul_cpu.h  reduce_cpu.h  transpose_cpu.h  unary_op_macros.h
headers/ops/kernels/: binary_op_macros.cuh  fill_gpu.cuh  fused_op.cuh  matmul_gpu.cuh  reduce_gpu.cuh  transpose_gpu.cuh  unary_op_macros.cuh
headers/type_traits/: types.cuh
old_bkp/cuda_mapped_memory/: mapped
old_bkp/cudatest/bkp/: info.cu  kernels.cu  serial.cu
old_bkp/cudatest/src/: main.py  mat.cpp  matops.cu
old_bkp/shared_memory/: shared_memory
python/: README.md  pyproject.toml  test_bindings.py
python/openmat/: _clib.py  tensor.py
python/tests/: test_tensor.py
scripts/: detect_archs.py
shared_memory/: shared_memory  shared_memory.cu
src/: main.cpp  utils.cpp
src/ops/cpu/: matmul_cpu.cpp
src/ops/kernels/: binary_ops.cu  fill_gpu.cu  fused_op.cu  matmul_gpu.cu  reduce_gpu.cu  transpose_gpu.cu  unary_ops.cu
src/python/: openmat_capi.cpp
src/type_traits/: types.cu
tests/: CMakeLists.txt  tensor_ops_test.cpp  test_allocator_stream.cpp  test_arithmetic.cpp  test_benchmarks.cpp  test_device_transfer.cpp  test_factory.cpp  test_fused_ops.cpp  test_helpers.h  test_reductions.cpp  test_reshape.cpp  test_stream_perf.cpp  test_streams.cpp  test_stress.cpp  test_transpose.cpp
